objects/Advertiser__c.object
<CustomObject>
    <fields>
        <fullName>ADV_LOG_with_Expiration_Date__c</fullName>
        <description>This field will be used to provide an update on when an LOG will expire</description>
        <inlineHelpText>Please populate this field only if the LOG has an expiration date</inlineHelpText>
        <label>ADV LOG with Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Specifies the Agency (Account) associated with the Advertiser</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisers</relationshipLabel>
        <relationshipName>Advertisers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertiser_Approved_to_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked = Advertiser has been approved to book by Finance 
Unchecked = Advertiser has NOT been approved to book by Finance</inlineHelpText>
        <label>Advertiser Approved to Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertiser_CIA__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please check this box if the advertiser is CIA</inlineHelpText>
        <label>Advertiser CIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertiser_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to count the number of Advertisers in a given data set</inlineHelpText>
        <label>Advertiser Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertiser_Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advertiser Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advertiser_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Advertiser External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Number__c</fullName>
        <displayFormat>ADV-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Advertiser Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Advertiser_Terms__c</fullName>
        <label>Advertiser Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUR</fullName>
                </value>
                <value>
                    <fullName>NET 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <description>END - Endemic
PSA - Public Service Announcement</description>
        <label>SF Commercial Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HYBRID</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>END</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
                <value>
                    <fullName>TUNE IN</fullName>
                </value>
                <value>
                    <fullName>--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Approval__c</fullName>
        <description>Used to prevent duplicate advertisers from being created.</description>
        <label>Duplicate Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Placed_on_Advertiser_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked off, Finance has placed a hold on this account and no booking without approval from Finance.</inlineHelpText>
        <label>Hold Placed on Advertiser Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intacct_Adv_Balance__c</fullName>
        <label>Intacct Adv Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOG_Comments__c</fullName>
        <label>LOG Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked off if Finance has received an LOG</description>
        <inlineHelpText>This box will be checked off if Finance has received an LOG</inlineHelpText>
        <label>Letter Of Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box will be used to monitor advertisers w/ payment issues</description>
        <inlineHelpText>This check box will be used to monitor advertisers w/ payment issues</inlineHelpText>
        <label>Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Advertiser_Identifier__c</fullName>
        <label>Unique Advertiser Identifier</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Advertiser</label>
    <listViews>
        <fullName>ALL_CIA</fullName>
        <columns>NAME</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <columns>Advertiser_CIA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advertiser_CIA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ALL CIA</label>
    </listViews>
    <listViews>
        <fullName>ALL_w_Credit_Limit</fullName>
        <columns>NAME</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <columns>Advertiser_CIA__c</columns>
        <columns>LOG__c</columns>
        <columns>Duplicate_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advertiser_Credit_Limit__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>ALL w/ Credit Limit</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <columns>Advertiser_CIA__c</columns>
        <columns>Unique_Advertiser_Identifier__c</columns>
        <columns>Advertiser_Terms__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <columns>Comments__c</columns>
        <columns>LOG__c</columns>
        <columns>Commercial__c</columns>
        <columns>Advertiser_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <columns>Advertiser_CIA__c</columns>
        <columns>Unique_Advertiser_Identifier__c</columns>
        <columns>Advertiser_Terms__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <columns>Comments__c</columns>
        <columns>LOG__c</columns>
        <columns>Commercial__c</columns>
        <columns>Advertiser_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Knee Brace</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Comm_Type</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Unique_Advertiser_Identifier__c</columns>
        <columns>Advertiser_Terms__c</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>--</value>
        </filters>
        <label>Comm Type --</label>
    </listViews>
    <listViews>
        <fullName>Hybrid_Fix</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <columns>Advertiser_CIA__c</columns>
        <columns>Unique_Advertiser_Identifier__c</columns>
        <columns>Advertiser_Terms__c</columns>
        <columns>Dupe__c</columns>
        <columns>Merge__c</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>DR,GM,PSA,END</value>
        </filters>
        <label>Hybrid Fix</label>
    </listViews>
    <listViews>
        <fullName>LOG_Review</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LOG__c</columns>
        <columns>ADV_LOG_with_Expiration_Date__c</columns>
        <columns>Advertiser_Approved_to_Book__c</columns>
        <columns>Hold_Placed_on_Advertiser_Account__c</columns>
        <columns>Intacct_Adv_Balance__c</columns>
        <columns>Advertiser_Credit_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADV_LOG_with_Expiration_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>LOG Review</label>
    </listViews>
    <nameField>
        <label>Advertiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertisers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>